AssignmentGit/force-app/main/default/objects/Employee__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tell name</inlineHelpText>
    <label>College</label>
    <type>TextArea</type>
</CustomField>