AssignmentGit/force-app/main/default/objects/Employee__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee ID</label>
    <type>TextArea</type>
</CustomField>