AssignmentGit/force-app/main/default/objects/Employee__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nickname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>