AssignmentGit/force-app/main/default/objects/Employee__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>