AssignmentGit/force-app/main/default/objects/Employee__c/fields/Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Skill_Set__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skill Set</label>
    <length>50</length>
    <type>Text</type>
</CustomField>