AssignmentGit/force-app/main/default/objects/Employee__c/fields/Stipened__c.field-meta.xml
<CustomField>
    <fullName>Stipened__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stipened</label>
    <length>50</length>
    <type>Text</type>
</CustomField>